Fixed some bugs with the inputs. Fixed the fact that the label overlaps with the text.

--- a/frontend/src/assets/stylesheet/forms_style.scss
+++ b/frontend/src/assets/stylesheet/forms_style.scss
@@ -26,8 +26,7 @@
             padding: 1%;
             width: 80%;
             justify-self: center;
-            line-height: 1.7em;
-            left: 0;
+            line-height: 1.2em;
 
             font-size: 120%;
             border-radius: 10px;
@@ -58,11 +57,19 @@
         label {
             position: relative;
             width: fit-content;
-            height: 0.9em;
-            bottom: 1em;
-            left: 3em;
+            height: 0.8em;
+            padding-right: 5px;
+            padding-left: 5px;
+            bottom: 0.9em;
+            left: 2.5em;
             font-size: 150%;
             background-color: variables.$dark_form_background_color;
+
+            &.filled {
+                transform: translateY(-1em) scale(variables.$input_label_focused_scale);
+                background-color: variables.$dark_form_background_color;
+                z-index: 1111;
+            }
 
             &.right { color: variables.$right_highlight; }
             &.wrong { color: variables.$wrong_highlight; }
